// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose Validity Page should render correctly 1`] = `
<Component
  description="Choose Validity page of the Create Fares Data Service"
  title="Choose Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/chooseValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <fieldset
      className="govuk-fieldset"
    >
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--l"
      >
        <h1
          className="govuk-fieldset__heading"
        >
          How long is your product valid for?
        </h1>
      </legend>
      <div
        className="govuk-hint"
      >
        Product: 
        bus company
         - £
        £3.00
         - 
        Adult
      </div>
      <div
        className="govuk-hint"
        id="choose-validity-page-hint"
      >
        Enter a whole number, and select a duration type. For example, 7 months.
      </div>
      <Component
        errorIds={
          Array [
            "validity",
          ]
        }
        errors={Array []}
        hideErrorBar={false}
      >
        <label
          className="govuk-label"
          htmlFor="validity"
        >
          Number
        </label>
        <FormElementWrapper
          errorClass="govuk-input--error"
          errorId="validity"
          errors={Array []}
        >
          <input
            aria-describedby="choose-validity-page-hint"
            className="govuk-input govuk-input--width-2"
            defaultValue=""
            id="validity"
            name="validityInput"
            type="text"
          />
        </FormElementWrapper>
      </Component>
      <Component
        errorIds={
          Array [
            "validity-units",
          ]
        }
        errors={Array []}
        hideErrorBar={false}
      >
        <label
          className="govuk-label"
          htmlFor="validity-units"
        >
          Duration
        </label>
        <FormElementWrapper
          errorClass="govuk-select--error"
          errorId="validity-units"
          errors={Array []}
        >
          <select
            className="govuk-select"
            defaultValue=""
            id="validity-units"
            name="duration"
          >
            <option
              disabled={true}
              selected={true}
              value=""
            >
              Select a duration
            </option>
            <option
              value="hour"
            >
              Hours
            </option>
            <option
              value="day"
            >
              Days
            </option>
            <option
              value="week"
            >
              Weeks
            </option>
            <option
              value="month"
            >
              Months
            </option>
            <option
              value="year"
            >
              Years
            </option>
          </select>
        </FormElementWrapper>
      </Component>
      <input
        className="govuk-button"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </fieldset>
  </CsrfForm>
</Component>
`;

exports[`Choose Validity Page should render correctly with defaults when provided 1`] = `
<Component
  description="Choose Validity page of the Create Fares Data Service"
  title="Choose Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/chooseValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <fieldset
      className="govuk-fieldset"
    >
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--l"
      >
        <h1
          className="govuk-fieldset__heading"
        >
          How long is your product valid for?
        </h1>
      </legend>
      <div
        className="govuk-hint"
      >
        Product: 
        bus company
         - £
        £3.00
         - 
        Adult
      </div>
      <div
        className="govuk-hint"
        id="choose-validity-page-hint"
      >
        Enter a whole number, and select a duration type. For example, 7 months.
      </div>
      <Component
        errorIds={
          Array [
            "validity",
          ]
        }
        errors={Array []}
        hideErrorBar={false}
      >
        <label
          className="govuk-label"
          htmlFor="validity"
        >
          Number
        </label>
        <FormElementWrapper
          errorClass="govuk-input--error"
          errorId="validity"
          errors={Array []}
        >
          <input
            aria-describedby="choose-validity-page-hint"
            className="govuk-input govuk-input--width-2"
            defaultValue="2"
            id="validity"
            name="validityInput"
            type="text"
          />
        </FormElementWrapper>
      </Component>
      <Component
        errorIds={
          Array [
            "validity-units",
          ]
        }
        errors={Array []}
        hideErrorBar={false}
      >
        <label
          className="govuk-label"
          htmlFor="validity-units"
        >
          Duration
        </label>
        <FormElementWrapper
          errorClass="govuk-select--error"
          errorId="validity-units"
          errors={Array []}
        >
          <select
            className="govuk-select"
            defaultValue="day"
            id="validity-units"
            name="duration"
          >
            <option
              disabled={true}
              selected={true}
              value=""
            >
              Select a duration
            </option>
            <option
              value="hour"
            >
              Hours
            </option>
            <option
              value="day"
            >
              Days
            </option>
            <option
              value="week"
            >
              Weeks
            </option>
            <option
              value="month"
            >
              Months
            </option>
            <option
              value="year"
            >
              Years
            </option>
          </select>
        </FormElementWrapper>
      </Component>
      <input
        className="govuk-button"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </fieldset>
  </CsrfForm>
</Component>
`;
